--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			<h2>the homepage of <a href="https://youtu.be/_9wPuXhQ_zs?t=16s">tudurom</a></h2>
 
-<p><a href="/whoami/">whoami</a> <a href="/git/">code</a> <a href="/blog/">blog</a> <a href="/res/">res</a> <a href="/cow/">cow</a></p>
+<p><a href="/whoami/">whoami</a> <a href="https://github.com/tudurom/">code</a> <a href="/blog/">blog</a> <a href="/res/">res</a> <a href="/cow/">cow</a></p>
 
 		</main>
 	</body>
