--- a/whoami/index.html
+++ b/whoami/index.html
@@ -61,9 +61,10 @@ from this website. I also have a <a href="/blog">blog</a>.</p>
 <h3>Software I made</h3>
 
 <ul>
-<li><a href="https://github.com/tudurom/windowchef">windowchef</a></li>
-<li><a href="https://github.com/tudurom/orator">orator</a></li>
-<li><a href="https://github.com/gnotclub/albumify-next">albumify</a></li>
+<li><a href="https://github.com/tudurom/windowchef/">windowchef</a></li>
+<li><a href="https://github.com/tudurom/orator/">orator</a></li>
+<li><a href="https://github.com/gnotclub/albumify-next/">albumify</a></li>
+<li><a href="https://github.com/tudurom/rainbou/">rainbou</a></li>
 </ul>
 
 <h3>People and inspirational sites</h3>
