remove thetudor git link

--- a/whoami/index.html
+++ b/whoami/index.html
@@ -40,8 +40,8 @@ encourages programs to cooperate.</p>
 <p>This website is a collection of my thoughts and work and I hope people can learn
 from this website. I also have a <a href="/blog">blog</a>.</p>
 
-<p>I usually make all my projects open-source. They are public on <a href="/git">this
-  site</a> and <a href="https://github.com/tudurom">on GitHub</a>.</p>
+<p>I usually make all my projects open-source. They are public on
+<a href="https://github.com/tudurom/">GitHub</a>.</p>
 
 <h3>I speak in a multitude of languages:</h3>
 
