--- a/whoami/index.html
+++ b/whoami/index.html
@@ -18,6 +18,7 @@
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/solarized-dark.css">
+    <link rel="stylesheet" href="/css/csshake-default.min.css">
     <link rel="icon" href="/favicon.png">
 
 	<script src="/js/highlight.pack.js"></script>
@@ -29,7 +30,7 @@
 
 		<main>
 			
-<a href="/"><h1>tudor roman</h1></a>
+<a class="shake" href="/"><h1>tudor roman</h1></a>
 
 			<h2><a href="https://www.youtube.com/watch?v=U5u-X4bocr4">tudurom</a></h2>
 
@@ -79,7 +80,7 @@ from this website. I also have a <a href="/blog">blog</a>.</p>
 <li><a href="http://2f30.org/">2f30</a></li>
 <li><a href="http://aiju.de/">aiju</a></li>
 <li><a href="https://pluvi.us/">apk</a></li>
-<li><a href="http://arcetera.moe/">arc</a> (RIP domain)</li>
+<li><a href="http://arcetera.moe/">arc</a></li>
 <li><a href="https://lyngvaer.no/">dcat</a></li>
 <li><a href="https://robots.thoughtbot.com/">Thoughtbot blog</a></li>
 <li><a href="http://neeasade.net/">neeasade</a></li>
