--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/solarized-dark.css">
+    <link rel="stylesheet" href="/css/csshake-default.min.css">
     <link rel="icon" href="/favicon.png">
 
 	<script src="/js/highlight.pack.js"></script>
@@ -29,7 +30,7 @@
 
 		<main>
 			
-<a href="/"><h1>tudor roman</h1></a>
+<a class="shake" href="/"><h1>tudor roman</h1></a>
 
 			
 <h2>the homepage of <a href="https://youtu.be/_9wPuXhQ_zs?t=16s">tudurom</a></h2>
