--- a/whoami/index.html
+++ b/whoami/index.html
@@ -87,7 +87,7 @@ from this website. I also have a <a href="/blog">blog</a>.</p>
 <li><a href="http://rocx.rocks/">rocx</a></li>
 <li><a href="http://suckless.org/">suckless</a></li>
 <li><a href="https://venam.nixers.net/blog/">venam</a></li>
-<li><a href="http:s//xero.nu/">xero</a></li>
+<li><a href="http://xero.nu/">xero</a></li>
 <li><a href="https://z3bra.org/">z3bra</a></li>
 </ul>
 
