move "people and inspirational websites" from whoami to res

--- a/res/index.html
+++ b/res/index.html
@@ -51,6 +51,25 @@
 <li><a href="/res/docs/windowchef/waitron.1.html">waitron(1)</a></li>
 </ul>
 
+<h3>People and inspirational sites</h3>
+
+<div id="people"></div>
+
+<ul>
+<li><a href="http://2f30.org/">2f30</a></li>
+<li><a href="http://aiju.de/">aiju</a></li>
+<li><a href="https://pluvi.us/">apk</a></li>
+<li><a href="http://arcetera.moe/">arc</a></li>
+<li><a href="https://lyngvaer.no/">dcat</a></li>
+<li><a href="https://robots.thoughtbot.com/">Thoughtbot blog</a></li>
+<li><a href="http://neeasade.net/">neeasade</a></li>
+<li><a href="http://rocx.rocks/">rocx</a></li>
+<li><a href="http://suckless.org/">suckless</a></li>
+<li><a href="https://venam.nixers.net/blog/">venam</a></li>
+<li><a href="http://xero.nu/">xero</a></li>
+<li><a href="https://z3bra.org/">z3bra</a></li>
+</ul>
+
 		</main>
 	</body>
 </html>
