add ruler to projects list

--- a/whoami/index.html
+++ b/whoami/index.html
@@ -68,6 +68,7 @@ from this website. I also have a <a href="/blog">blog</a>.</p>
 <li><a href="https://github.com/tudurom/windowchef/">windowchef</a></li>
 <li><a href="https://github.com/tudurom/orator/">orator</a></li>
 <li><a href="https://github.com/gnotclub/albumify-next/">albumify</a></li>
+<li><a href="https://github.com/tudurom/ruler/">ruler</a></li>
 <li><a href="https://github.com/tudurom/rainbou/">rainbou</a></li>
 <li><a href="https://github.com/tudurom/dotfiles/">dotfiles</a></li>
 </ul>
