--- a/whoami/index.html
+++ b/whoami/index.html
@@ -65,12 +65,12 @@ from this website. I also have a <a href="/blog">blog</a>.</p>
 <h3>Software I made</h3>
 
 <ul>
-<li><a href="https://github.com/tudurom/windowchef/">windowchef</a></li>
-<li><a href="https://github.com/tudurom/orator/">orator</a></li>
-<li><a href="https://github.com/gnotclub/albumify-next/">albumify</a></li>
-<li><a href="https://github.com/tudurom/ruler/">ruler</a></li>
-<li><a href="https://github.com/tudurom/rainbou/">rainbou</a></li>
-<li><a href="https://github.com/tudurom/dotfiles/">dotfiles</a></li>
+<li><a href="https://github.com/tudurom/windowchef/">windowchef</a> - scriptable stacking window manager.</li>
+<li><a href="https://github.com/tudurom/orator/">orator</a> - static site generator (used to build this site).</li>
+<li><a href="https://github.com/gnotclub/albumify-next/">albumify</a> - image album generator.</li>
+<li><a href="https://github.com/tudurom/ruler/">ruler</a> - window rule daemon.</li>
+<li><a href="https://github.com/tudurom/rainbou/">rainbou</a> - color scheme config file generator.</li>
+<li><a href="https://github.com/tudurom/dotfiles/">dotfiles</a> - files of the dots.</li>
 </ul>
 
 		</main>
