Add the gnot club to the resources page.

--- a/res/index.html
+++ b/res/index.html
@@ -61,7 +61,7 @@
 <li><a href="https://pluvi.us/">apk</a></li>
 <li><a href="http://arcetera.moe/">arc</a></li>
 <li><a href="https://lyngvaer.no/">dcat</a></li>
-<li><a href="https://robots.thoughtbot.com/">Thoughtbot blog</a></li>
+<li><a href="https://github.com/gnotclub/">The Gnot Club</a></li>
 <li><a href="http://neeasade.net/">neeasade</a></li>
 <li><a href="http://rocx.rocks/">rocx</a></li>
 <li><a href="http://suckless.org/">suckless</a></li>
