--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<a href="/blog/">blog</a>
 	<a href="https://github.com/tudurom/">code</a>
 	<a href="/res/">res</a>
-	<a href="/pub/">pub</a>
+	<a href="://pub.tudorr.xyz/">pub</a>
 	<a href="/cow/">cow</a>
 </p>
 
