--- a/.orator_site/content/index.html
+++ b/.orator_site/content/index.html
@@ -9,6 +9,6 @@ layout: default
 	<a href="/blog/">blog</a>
 	<a href="https://github.com/tudurom/">code</a>
 	<a href="/res/">res</a>
-	<a href="://pub.tudorr.xyz/">pub</a>
+	<a href="https://pub.tudorr.xyz/">pub</a>
 	<a href="/cow/">cow</a>
 </p>
