--- a/whoami/index.html
+++ b/whoami/index.html
@@ -34,9 +34,7 @@
 
 			<h2><a href="https://www.youtube.com/watch?v=U5u-X4bocr4">tudurom</a></h2>
 
-<p>Hey, my name is Tudor and I study computer science at the
-<a href="https://en.wikipedia.org/wiki/Tudor_Vianu_National_College_of_Computer_Science">&ldquo;Tudor Vianu&rdquo; National College of Computer Science</a>
-in <a href="https://en.wikipedia.org/wiki/Bucharest">Bucharest, Romania</a>. Online I&rsquo;m known as &ldquo;tudurom&rdquo;.
+<p>Hey, my name is Tudor and I&rsquo;m online known as &ldquo;tudurom&rdquo;.
 My passion and hobby is designing and writing computer programs. I like <a href="https://en.wikipedia.org/wiki/Unix_philosophy">the UNIX
 philosophy</a> because of the way it
 encourages programs to cooperate.</p>
