--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 	<meta name="theme-color" content="#456472">
 
+	<link rel="stylesheet" href="/css/colors.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/solarized-dark.css">
     <link rel="stylesheet" href="/css/csshake-default.min.css">
