small layout changes

--- a/.orator_site/content/index.html
+++ b/.orator_site/content/index.html
@@ -4,11 +4,11 @@ layout: default
 
 <h2>the homepage of <a href="https://youtu.be/_9wPuXhQ_zs?t=16s">tudurom</a></h2>
 
-<p class="home-links">
-	<a href="/whoami/">whoami</a>
-	<a href="/blog/">blog</a>
-	<a href="https://github.com/tudurom/">code</a>
-	<a href="/res/">res</a>
-	<a href="https://pub.tudorr.xyz/">pub</a>
-	<a href="/cow/">cow</a>
-</p>
+<ul class="home-links">
+	<li><a href="/whoami/">whoami</a></li>
+	<li><a href="/blog/">blog</a></li>
+	<li><a href="https://github.com/tudurom/">code</a></li>
+	<li><a href="/res/">res</a></li>
+	<li><a href="https://pub.tudorr.xyz/">pub</a></li>
+	<li><a href="/cow/">cow</a></li>
+</ul>
