--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <ul class="home-links">
 	<li><a href="/whoami/">whoami</a></li>
 	<li><a href="/blog/">blog</a></li>
+	<li><a href="/software/">software</a></li>
 	<li><a href="https://github.com/tudurom/">code</a></li>
 	<li><a href="/res/">res</a></li>
 	<li><a href="https://pub.tudorr.xyz/">pub</a></li>
