--- a/.orator_site/content/index.html
+++ b/.orator_site/content/index.html
@@ -7,6 +7,7 @@ layout: default
 <ul class="home-links">
 	<li><a href="/whoami/">whoami</a></li>
 	<li><a href="/blog/">blog</a></li>
+	<li><a href="/software/">software</a></li>
 	<li><a href="https://github.com/tudurom/">code</a></li>
 	<li><a href="/res/">res</a></li>
 	<li><a href="https://pub.tudorr.xyz/">pub</a></li>
