a bit of cleanup

--- a/software/index.html
+++ b/software/index.html
@@ -52,7 +52,16 @@
 <h3>Real stuff</h3>
 
 <ul>
-<li><a href="https://github.com/xmc-dev">XMC</a> - XMC Manages Contests. CS contest manager. Work In Progress.</li>
+<li><a href="https://github.com/xmc-dev/xmc">XMC</a> - XMC Manages Contests. CS contest manager. Work In Progress.</li>
+<li>VPerf - Contest manager for the &ldquo;Performanțe Vianiste&rdquo; multidisciplinary
+contest held by the Tudor Vianu National College of Computer Science.
+
+<ul>
+<li><a href="https://github.com/CNITV/vperf-server">Server</a> - Server component,
+written in Go. This is written by me.</li>
+<li><a href="https://github.com/CNITV/vperf-web">Web Client</a> - Client component, runs
+in the browser. Made by <a href="https://cip.fun">Ciprian</a></li>
+</ul></li>
 </ul>
 
 <h3>Telegram bots</h3>
