--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <a class="shake" href="/"><h1>tudor roman</h1></a>
 
 			
-<h2>the homepage of <a href="https://youtu.be/_9wPuXhQ_zs?t=16s">tudurom</a></h2>
+<h2><a href="https://youtu.be/_9wPuXhQ_zs?t=16s">homepage</a></h2>
 
 <ul class="home-links">
 	<li><a href="/whoami/">whoami</a></li>
