--- a/whoami/index.html
+++ b/whoami/index.html
@@ -32,10 +32,11 @@
 			
 <a class="shake" href="/"><h1>tudor roman</h1></a>
 
-			<h2><a href="https://www.youtube.com/watch?v=U5u-X4bocr4">tudurom</a></h2>
+			<h2><a href="https://www.youtube.com/watch?v=U5u-X4bocr4">Tudor-Ioan Roman</a></h2>
 
-<p>Hey, my name is Tudor and I&rsquo;m online known as &ldquo;tudurom&rdquo;.
-My passion and hobby is designing and writing computer programs. I like <a href="https://en.wikipedia.org/wiki/Unix_philosophy">the UNIX
+<p>I go by the handle &ldquo;tudurom&rdquo; on some sites (GitHub, reddit).</p>
+
+<p>My passion and hobby is designing and writing computer programs. I like <a href="https://en.wikipedia.org/wiki/Unix_philosophy">the UNIX
 philosophy</a> because of the way it
 encourages programs to cooperate.</p>
 
@@ -47,7 +48,7 @@ from it. I also have a <a href="/blog">blog</a>.</p>
 
 <h3>I speak in a multitude of languages:</h3>
 
-<p>Romanian, C, English, Go, JavaScript, POSIX shell, CSS3, HTML5, *Ruby</p>
+<p>Romanian, C, English, Go, JavaScript, POSIX shell, *CSS3, HTML5, *Ruby</p>
 
 <h5>* I speak very rarely in these languages or I&rsquo;m not very experienced with them</h5>
 
@@ -62,7 +63,7 @@ from it. I also have a <a href="/blog">blog</a>.</p>
 
 <script>
 document.getElementById('email').innerHTML =
-`<span class="fakelink" onclick="this.innerHTML = atob('PGEgaHJlZj0ibWFpbHRvOnR1ZG9yQHR1ZG9yci54eXoiPnR1ZG9yQHR1ZG9yci54eXo8L2E+')">email</span>
+`<span class="fakelink" onclick="this.innerHTML = atob('dHVkdXJvbUBnbWFpbC5jb20=')">email</span>
 `
 </script>
 
