tudorr.xyz -> tudorr.ro

--- a/.orator_site/content/index.html
+++ b/.orator_site/content/index.html
@@ -10,6 +10,6 @@ layout: default
 	<li><a href="/software/">software</a></li>
 	<li><a href="https://github.com/tudurom/">code</a></li>
 	<li><a href="/res/">res</a></li>
-	<li><a href="https://pub.tudorr.xyz/">pub</a></li>
+	<li><a href="https://pub.tudorr.ro/">pub</a></li>
 	<li><a href="/cow/">cow</a></li>
 </ul>
