--- a/software/windowchef/index.html
+++ b/software/windowchef/index.html
@@ -68,7 +68,7 @@ while being easily extensible through shell scripts or other external programs.<
 
 <h3>Screenshot</h3>
 
-<p><a href="https://pub.tudorr.xyz/windowchef.png"><img src="https://pub.tudorr.xyz/windowchef.png" alt="Screenshot" /></a></p>
+<p><a href="https://pub.tudorr.ro/windowchef.png"><img src="https://pub.tudorr.ro/windowchef.png" alt="Screenshot" /></a></p>
 
 <p>Here we have a GNU Emacs window in monocle mode. At the top there is a <code>lemonbar</code> panel
 and on the right is a <code>lemonbar</code> notification.</p>
