--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<li><a href="/software/">software</a></li>
 	<li><a href="https://github.com/tudurom/">code</a></li>
 	<li><a href="/res/">res</a></li>
-	<li><a href="https://pub.tudorr.xyz/">pub</a></li>
+	<li><a href="https://pub.tudorr.ro/">pub</a></li>
 	<li><a href="/cow/">cow</a></li>
 </ul>
 
