--- a/whoami/index.html
+++ b/whoami/index.html
@@ -41,9 +41,8 @@ philosophy</a> because of the way it
 encourages programs to cooperate.</p>
 
 <p>This website is a collection of my thoughts and work and I hope people can learn
-from it. I also have a <a href="/blog">blog</a>.</p>
-
-<p>I usually make my projects open-source. They are public on
+from it. I also have a <a href="/blog">blog</a>.
+I usually make my projects open-source. They are public on
 <a href="https://github.com/tudurom/">GitHub</a>.</p>
 
 <h3>I speak in a multitude of languages:</h3>
@@ -57,13 +56,14 @@ from it. I also have a <a href="/blog">blog</a>.</p>
 <ul>
 <li><a href="/pgp.pub">PGP public key</a></li>
 <li><a href="/ssh.pub">SSH public key</a></li>
-<li><span id="email"><noscript><a href="http://www.google.com/recaptcha/mailhide/d?k=01LsNWB77Nmvhu-8_AZvNJYQ==&c=nGgmrOzd6xO53hSFLa9Eb5z1mMnkdGauQmD9YYhmBB8=">email</a></noscript></span></li>
+<li><span id="email"><noscript>email: Enable javascript to see it, or grab a git
+repo of mine and look through <code>git log</code>.</noscript></span></li>
 <li><a href="https://github.com/tudurom">GitHub</a></li>
 </ul>
 
 <script>
 document.getElementById('email').innerHTML =
-`<span class="fakelink" onclick="this.innerHTML = atob('dHVkdXJvbUBnbWFpbC5jb20=')">email</span>
+`<span class="fakelink" onclick="this.innerHTML = atob('dHVkb3JAdHVkb3JyLnJv')">email</span>
 `
 </script>
 
@@ -71,6 +71,8 @@ document.getElementById('email').innerHTML =
 
 <ul>
 <li><a href="https://github.com/tudurom/windowchef/">windowchef</a> - scriptable stacking window manager.</li>
+<li><a href="https://git.sr.ht/~tudor/rwsh">rwsh</a> - a new, modern shell, that doubles as a
+text processor. Work in progress.</li>
 <li><a href="https://github.com/tudurom/orator/">orator</a> - static site generator (used to build this site).</li>
 <li><a href="https://github.com/gnotclub/albumify-next/">albumify</a> - image album generator.</li>
 <li><a href="https://github.com/tudurom/ruler/">ruler</a> - window rule daemon.</li>
