--- a/gen/res/index.html
+++ b/gen/res/index.html
@@ -57,14 +57,14 @@
 
 <ul>
 <li><a href="http://2f30.org/">2f30</a></li>
-<li><a href="http://aiju.de/">aiju</a></li>
 <li><a href="https://pluvi.us/">apk</a></li>
-<li><a href="http://arcetera.moe/">arc</a></li>
 <li><a href="https://lyngvaer.no/">dcat</a></li>
-<li><a href="https://github.com/gnotclub/">The Gnot Club</a></li>
+<li><a href="https://knightsofthelambdacalcul.us/">hazel</a></li>
+<li><a href="https://lobste.rs/">Lobsters</a></li>
 <li><a href="http://neeasade.net/">neeasade</a></li>
 <li><a href="http://rocx.rocks/">rocx</a></li>
 <li><a href="http://suckless.org/">suckless</a></li>
+<li><a href="https://github.com/gnotclub/">The Gnot Club</a></li>
 <li><a href="https://venam.nixers.net/blog/">venam</a></li>
 <li><a href="http://xero.nu/">xero</a></li>
 <li><a href="https://z3bra.org/">z3bra</a></li>
