--- a/gen/software/index.html
+++ b/gen/software/index.html
@@ -34,7 +34,7 @@
 
 			<h2>Software</h2>
 
-<p>This is a list of software projects made by me and their coresponding web pages.</p>
+<p>This is a list of software projects worth mentioning made by me, and their coresponding web pages.</p>
 
 <p>Most listed programs run only on UNIX-like platforms.</p>
 
@@ -43,50 +43,35 @@
 <p>Programs that together can be used to make a lightweight desktop environment.</p>
 
 <ul>
-<li><a href="windowchef/">windowchef</a> - A lightweight stacking window manager for X11.</li>
-<li><a href="https://github.com/tudurom/ruler">ruler</a> - Window rule daemon. Executes user-defined commands when windows with certain properties are spawned/mapped.</li>
-<li><a href="https://github.com/tudurom/disputils">disputils</a> - Display information querying utilities. List displays, their size and such.</li>
-<li><a href="https://github.com/tudurom/dotfiles">dotfiles</a> - The glue</li>
+<li><a href="https://gitlab.com/cardboardwm/cardboard">cardboard</a> - Scrollable tiling Wayland compositor;</li>
+<li><a href="windowchef/">windowchef</a> - A lightweight stacking window manager for X11;</li>
+<li><a href="https://github.com/tudurom/ruler">ruler</a> - Window rule daemon. Executes user-defined commands when windows with certain properties are spawned/mapped;</li>
+<li><a href="https://github.com/tudurom/disputils">disputils</a> - Display information querying utilities. List displays, their size and such;</li>
+<li><a href="https://git.sr.ht/~tudor/rwsh">rwsh</a> (Really Weird Shell) - A new shell with pattern matching and structural regular expressions, written in Rust. Incomplete experiment;</li>
+<li><a href="https://github.com/tudurom/dotfiles">dotfiles</a> - The glue.</li>
 </ul>
 
 <h3>Real stuff</h3>
 
 <ul>
-<li><a href="https://github.com/xmc-dev/xmc">XMC</a> - XMC Manages Contests. CS contest manager. Work In Progress.</li>
+<li><a href="https://github.com/xmc-dev/xmc">XMC</a> - XMC Manages Contests. CS contest manager. Failed experiment.</li>
 <li>VPerf - Contest manager for the &ldquo;Performanțe Vianiste&rdquo; multidisciplinary
 contest held by the Tudor Vianu National College of Computer Science.
 
 <ul>
 <li><a href="https://github.com/CNITV/vperf-server">Server</a> - Server component,
-written in Go. This is written by me.</li>
+written in Go. This is written by me;</li>
 <li><a href="https://github.com/CNITV/vperf-web">Web Client</a> - Client component, runs
-in the browser. Made by <a href="https://cip.fun">Ciprian</a></li>
+in the browser. Made by <a href="https://cip.fun">Ciprian</a>.</li>
 </ul></li>
-</ul>
-
-<h3>Telegram bots</h3>
-
-<ul>
-<li><a href="https://github.com/tudurom/slashr_bot">slashr_bot</a> - Reddit shortlink (<code>/u/</code>, <code>/r/</code>) bot.</li>
-<li><a href="https://t.me/mangler_bot">mangler_bot</a> - Bot that mangles text to make it meme-y.</li>
-</ul>
-
-<h3>Desktop style</h3>
-
-<p>Programs that are only for aesthetic purposes.</p>
-
-<ul>
-<li><a href="https://github.com/tudurom/orator">rainbou</a> - Color scheme database and config file generator.</li>
-<li><a href="https://github.com/tudurom/startpage">startpage</a> - Smart browser start page that fetches the color scheme from the X Resource Database.</li>
 </ul>
 
 <h3>Web stuff</h3>
 
-<p>Web dev.</p>
-
 <ul>
-<li><a href="https://github.com/tudurom/orator">orator</a> - One of my first Go projects. Simple static site generator. I&rsquo;m still using it to this day to generate this very site. I warn you, the code is horrible.</li>
-<li><a href="https://github.com/tudurom/">this website</a> - Self-explanatory.</li>
+<li><a href="https://github.com/tudurom/orator">orator</a> - One of my first Go projects. Simple static site generator. I&rsquo;m still using it to this day to generate this very site. I warn you, the code is horrible;</li>
+<li><a href="https://github.com/tudurom/site">this website</a>;</li>
+<li><a href="https://github.com/tudurom/blog">the blog</a>.</li>
 </ul>
 
 		</main>
