--- a/gen/whoami/index.html
+++ b/gen/whoami/index.html
@@ -34,22 +34,12 @@
 
 			<h2><a href="https://www.youtube.com/watch?v=U5u-X4bocr4">Tudor-Ioan Roman</a></h2>
 
-<p>I go by the handle &ldquo;tudurom&rdquo; on some sites (GitHub, reddit).</p>
-
-<p>My passion and hobby is designing and writing computer programs. I like <a href="https://en.wikipedia.org/wiki/Unix_philosophy">the UNIX
-philosophy</a> because of the way it
-encourages programs to cooperate.</p>
+<p>I go by the handle &ldquo;tudurom&rdquo; or &ldquo;tudorr&rdquo; on some sites.</p>
 
 <p>This website is a collection of my thoughts and work and I hope people can learn
 from it. I also have a <a href="/blog">blog</a>.
 I usually make my projects open-source. They are public on
-<a href="https://github.com/tudurom/">GitHub</a>.</p>
-
-<h3>I speak in a multitude of languages:</h3>
-
-<p>Romanian, C, English, Go, JavaScript, POSIX shell, *CSS3, HTML5, *Ruby</p>
-
-<h5>* I speak very rarely in these languages or I&rsquo;m not very experienced with them</h5>
+<a href="https://github.com/tudurom/">GitHub</a>, <a href="https://gitlab.com/tudorr/">GitLab</a>, <a href="https://sr.ht/~tudor/">Sourcehut</a>.</p>
 
 <h3>Online</h3>
 
@@ -69,15 +59,15 @@ document.getElementById('email').innerHTML =
 
 <h3>Software I made</h3>
 
+<p>More details <a href="/software/">here</a>.</p>
+
 <ul>
-<li><a href="https://github.com/tudurom/windowchef/">windowchef</a> - scriptable stacking window manager.</li>
+<li><a href="https://gitlab.com/cardboardwm/cardboard">cardboard</a> - scrollable tiling Wayland compositor;</li>
+<li><a href="https://github.com/tudurom/windowchef/">windowchef</a> - scriptable stacking X11 window manager;</li>
 <li><a href="https://git.sr.ht/~tudor/rwsh">rwsh</a> - a new, modern shell, that doubles as a
-text processor. Work in progress.</li>
-<li><a href="https://github.com/tudurom/orator/">orator</a> - static site generator (used to build this site).</li>
-<li><a href="https://github.com/gnotclub/albumify-next/">albumify</a> - image album generator.</li>
-<li><a href="https://github.com/tudurom/ruler/">ruler</a> - window rule daemon.</li>
-<li><a href="https://github.com/tudurom/rainbou/">rainbou</a> - color scheme config file generator.</li>
-<li><a href="https://github.com/tudurom/dotfiles/">dotfiles</a> - files of the dots.</li>
+text processor. More of an experiment, incomplete;</li>
+<li><a href="https://github.com/tudurom/ruler/">ruler</a> - window rule daemon for X11;</li>
+<li><a href="https://github.com/tudurom/dotfiles/">dotfiles</a> - managed with <a href="https://github.com/rycee/home-manager"><code>home-manager</code></a> and Nix.</li>
 </ul>
 
 		</main>
