added 'code' page

--- a/content/index.html
+++ b/content/index.html
@@ -8,8 +8,7 @@ layout: default
 	<li><a href="/whoami/">whoami</a></li>
 	<li><a href="/blog/">blog</a></li>
 	<li><a href="/software/">software</a></li>
-	<li><a href="https://github.com/tudurom/">code</a></li>
+	<li><a href="/code/">code</a></li>
 	<li><a href="/res/">res</a></li>
-	<li><a href="https://pub.tudorr.ro/">pub</a></li>
 	<li><a href="/cow/">cow</a></li>
 </ul>
