--- a/gen/code/index.html
+++ b/gen/code/index.html
@@ -5,7 +5,7 @@
 <head>
 	
 	<title>
-		tudor&#39;s swamp
+		code - tudor&#39;s swamp
 	</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,16 +31,19 @@
 			
 <a class="shake" href="/"><h1>tudor roman</h1></a>
 
-			
-<h2><a href="https://youtu.be/_9wPuXhQ_zs?t=16s">homepage</a></h2>
+			<h2>Code</h2>
 
-<ul class="home-links">
-	<li><a href="/whoami/">whoami</a></li>
-	<li><a href="/blog/">blog</a></li>
-	<li><a href="/software/">software</a></li>
-	<li><a href="/code/">code</a></li>
-	<li><a href="/res/">res</a></li>
-	<li><a href="/cow/">cow</a></li>
+<p>Free and Open Source software contributed tremendously to my programming
+education. Therefore, I am also publishing almost all of my codes online,
+for others to enjoy.</p>
+
+<h3>Code sharing websites</h3>
+
+<ul>
+<li><a href="https://git.tudorr.ro/">My Git</a></li>
+<li><a href="https://gitlab.com/tudor">GitLab</a></li>
+<li><a href="https://github.com/tudurom">GitHub</a></li>
+<li><a href="https://sr.ht/~tudor">Sourcehut</a></li>
 </ul>
 
 		</main>
