fixed blog link

--- a/gen/whoami/index.html
+++ b/gen/whoami/index.html
@@ -36,7 +36,7 @@
 <p>I go by the handle &ldquo;tudurom&rdquo; or &ldquo;tudorr&rdquo; on some sites.</p>
 
 <p>This website is a collection of my thoughts and work and I hope people can learn
-from it. I also have a <a href="/blog">blog</a>.
+from it. I also have a <a href="/blog/">blog</a>.
 I usually make my projects open-source. They are public on
 <a href="https://github.com/tudurom/">GitHub</a>, <a href="https://gitlab.com/tudorr/">GitLab</a>, <a href="https://sr.ht/~tudor/">Sourcehut</a>.</p>
 
