--- a/content/index.html
+++ b/content/index.html
@@ -8,6 +8,7 @@ layout: default
 	<li><a href="/whoami/">whoami</a></li>
 	<li><a href="/blog/">blog</a></li>
 	<li><a href="/software/">software</a></li>
+	<li><a rel="me" href="https://hachyderm.io/@tudor">toot</a></li>
 	<li><a href="/code/">code</a></li>
 	<li><a href="/res/">res</a></li>
 	<li><a href="/cow/">cow</a></li>
